tests/testFiles/semanticErrors/initobjwithtoomanyargs.meme
wow testClass3 {
  such (a, b) {
  }
}

ermahgerd a = very testClass3(10, 11, 12);
